[package]
name = "rdap_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdap_types = { path = "../rdap_client/rdap_types" }
mendes = { version = "0.0.64", features = ["with-hyper", "serde-derive", "models", "gzip", "brotli"] }
async-trait = "0.1"
hyper = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"]} 
thiserror = "1"
serde_json = "1"
serde = "1"
futures-util = "0.3"