[package]
name = "rdap_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdap_types = { git = "https://github.com/rsdy/rdap_client" }
mendes = { version = "0.0.64", features = ["with-hyper", "serde-derive", "models", "gzip", "brotli"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"]} 
redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
hyper = "0.14"
thiserror = "1"
serde_json = "1"
serde = "1"
futures-util = "0.3"
ipnet = "2.5.0"
globset = "0.4.9"
anyhow = "1.0.58"
chrono = "0.4.19"
